fix: dark mode in some sections

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,20 +1,12 @@
-:root {
+/* Define estilos com base na classe adicionada pelo Chakra ao <html> */
+html.chakra-ui-light {
   --background: #ffffff;
   --foreground: #171717;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
-
-html,
-body {
-  max-width: 100vw;
-  overflow-x: hidden;
-  scroll-behavior: smooth;
+html.chakra-ui-dark {
+  --background: #0a0a0a;
+  --foreground: #ededed;
 }
 
 body {
@@ -23,12 +15,7 @@ body {
   font-family: Arial, Helvetica, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-}
-
-* {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
+  transition: background 0.2s ease, color 0.2s ease;
 }
 
 a {
@@ -36,8 +23,8 @@ a {
   text-decoration: none;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
+* {
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
 }
