--- a/src/components/experience/Experience.module.css
+++ b/src/components/experience/Experience.module.css
@@ -43,14 +43,14 @@
   font-size: 1rem;
   font-weight: 400;
   font-family: Poppins, sans-serif;
-  color: #8491A0;
+  /* color: #8491A0; */
 }
 
 .experienceItemContent p {
   font-size: 1rem;
   font-weight: 400;
   font-family: Poppins, sans-serif;
-  color: #8491A0;
+  /* color: #8491A0; */
   margin-top: 1.438rem;
 }
 
